git-svn-id: http://svn.code.sf.net/p/daylightchart/code@364 68adf913-14b5-4d52-97c4-70b13c5eca14